connect.htm ok avec conecthref

--- a/platforms/browser/www/css/connect.css
+++ b/platforms/browser/www/css/connect.css
@@ -1,4 +1,4 @@
-/*//////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
 @font-face {
@@ -450,4 +450,4 @@
       padding-left: 15px;
       padding-right: 15px;
     }
-  }
+  } 
