--- a/www/css/index.css
+++ b/www/css/index.css
@@ -6,8 +6,20 @@
     position:absolute; 
     top:0; 
     bottom:0; 
-    width:100%;
+    width:100 %;
  } */
+
+ /****************** MARKERS STYLE ************************/
+ .marker {
+    background-image: url('images/autres.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+
     /* // MAP POP-UP STYLE */
 
 .mapboxgl - popup{
