--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -1,11 +1,3 @@
-body{
-    
-    background-size: auto;
-    background-repeat: no-repeat;
-    height: 100%;
-    margin: 0;
-
-}
 
 /********************************************************************
 *
@@ -190,6 +182,8 @@ a.article, a.article:hover {
 }
 
 
+
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
@@ -223,7 +217,20 @@ a.article, a.article:hover {
     }
 
 }
+#search{
+    position: absolute;
+	top: 0px;
+	right: 0px;
+    float: left;
 
+}
+#inputSearch{
+    border-radius : 15px;
+}
+#profil{
+   width: auto;
+   height: auto;
+}
 #mapid { height: 600px; }
 
  /****************** MARKERS STYLE ************************/
