--- a/www/css/connect.css
+++ b/www/css/connect.css
@@ -154,6 +154,7 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
+    background-color: #054471;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -184,6 +185,7 @@
     border-radius: 10px;
     overflow: hidden;
     float: right;
+    margin-left: 400px;
    
   
     box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
